@@ -1,3 +1,4 @@
+* Add parameter rate_decimal
 * Add scheduled task to update rates
 
 Version 5.8.0 - 2020-11-02
